main/default/objects/EventAction__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>Action__c</referenceTo>
    <relationshipLabel>Event Actions</relationshipLabel>
    <relationshipName>EventActions</relationshipName>
    <type>Lookup</type>
</CustomField>