main/default/objects/EventAction__c/fields/Delivered_to__c.field-meta.xml
<CustomField>
    <fullName>Delivered_to__c</fullName>
    <label>Delivered to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>