main/default/objects/EventAction__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <formula>CASE(Action_Type__c,
&quot;Removal&quot;, 0,
&quot;Local Archival&quot;, 1,
&quot;External Archival&quot;, 1,
2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>